Thêm cấu hình IP cho user
